static/css/app.less
/* ... */
.x-close-container {
  display: inline;
  padding-left: 16px;
}

li.sidebar-primary-item-action {
  backgrond-color: #2B333B;
}

li.selected_item {
  background-color: #3D454D;
}

li:hover .sidebar-primary-item-action {
  background-color: #3D454D;
}

.sidebar-primary-item-action-text-container {
  display: inline;
}

.sidebar-primary-item-action-text {
  top: 8px;
  position: relative;
  left: -71px;
  font-weight: 600;
  font-family: 'Open Sans', sans-serif;
}

.sidebar-primary-item-action a {
  padding: 0 89px 18px 89px;
  text-decoration: none;
  display: inline;
  cursor: pointer;
}

.sidebar-noclick {
  cursor: default;
}

.sidebar-header {
  text-align: center;
  display: block;
  color: #c2c5ca;
  font-weight: 500;
  height: 23px;
  white-space: nowrap;
  box-sizing: border-box;
  margin-top: 0px;
  font-size: 12px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  padding: 4px 0px 0px 0px;
}

.sidebar-primary-item-action span {
  color: #85898C; // sets color of letters
}

.sidebar-primary-item-action .selected_item span {
  color: #FFFFFF
}

.boxed {
  font-size: 11px;
  opacity: 0.7;
  margin-left: 4px;
}

// top header

.navbar-inverse {
  background-color: #fff;
  border-color: #EBEBEB;
}

.logo-box {
  position: absolute;
  width: 250px;
  left: 0px;
  background-color: #51D2B7;
  color: #fff;
  height: 102%;
  font-family: 'Open Sans';
  font-weight: 600;
  font-size: 18px;
}

.logo-box span {
  position: relative;
  top: 25%;
  left: 7.5%;
  right: -12.5%;
}

.logo-box a {
  text-decoration: none;
  color: inherit;
}

.search-box {
  margin-left: auto;
  margin-right: auto;
  width: 500px;
}

// Spice up the search bar
.search-box input, .search-box input:focus {
  border: none;
  box-shadow: none;
  -webkit-box-shadow: none;
  transition: none;
  -webkit-transition: none;
  background-color: #F7F7F7;
}

.input-group {
  top: 7px;
}

.input-group-addon {
  border: none;
  background-color: #BDC2CA;
}

.input-group-addon i {
  color: #fff;
}

.guide-count-box {
  position: absolute;
  width: 320px;
  right: 0px;
  color: #2B333B;
  height: 100%;
  top: 0px;
}

/*
.guide-count-box span:first-child {
  position: relative;
  top: 25%;
  left: -12.5%;
  right: 12.5%;
  padding: 10px;
  border: 2px solid #666;
}
*/

.guide-count-box button {
  position: relative;
  top: 12.5%;
  // background-color: #FF4081; // magenta
  // border-color: #BDBDBD; // slight stroke
  margin-right: 15px;
  float: right;
}

.guide-count-box span {
  position: relative;
  top: 25%;
  float: left;
}

@media (max-width:767px) {

    #wrapper {
      padding-left: 0;
    }

    #sidebar-wrapper {
      left: 0;
    }

    #wrapper.active {
      position: relative;
      left: 250px;
    }

    #wrapper.active #sidebar-wrapper {
      left: 250px;
      width: 250px;
      transition: all 0.4s ease 0s;
    }

}

// Arrow stuff
#hero .down {
    text-align: center;
    position: absolute;
    top: auto;
    right: auto;
    bottom: 85px;
    left: 15px;
    width: 100%;
}

@media screen and (max-width: 1440px) {
  #hero .down span.arrow {
      width: 75px;
      height: 75px;
      line-height: 75px;
      display: inline-block;
  }
}

.inner-arrow {
    position: absolute;
    top: 0;
    margin: auto;
    bottom: 0;
    right: 0;
    left: 0;
    height: 75px;
    width: 75px;
}

#hero .down span.arrow {
  color: #333;
  width: 75px;
  height: 75px;
  position: relative;
  cursor: pointer;
  text-align: center;
  line-height: 75px;
  border-radius: 37.5px;
  border-radius: 50%;
  background: #fff200;
  box-shadow: 0 6px 20px 0 rgba(0,0,0,0.09),0 8px 17px 0 rgba(0,0,0,0.08);
  -webkit-transition: box-shadow .1s ease-in-out, transform .1s ease-in-out;
  transition: box-shadow .1s ease-in-out, transform .1s ease-in-out;
}

// Placeholder text for genes and tissues
#hero ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
  color: #b1edff;
}
#hero :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
  color: #b1edff;
}
#hero ::-moz-placeholder { /* Mozilla Firefox 19+ */
  color: #b1edff;
}
#hero :-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: #b1edff;
}
#hero :placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
  color: #b1edff;
}

// Tissue switch
.switch {
  float: right;
}

.switch.checked {
  background: rgb(255, 64, 129);
  border-color: rgb(255, 64, 129);
}

#show_different_guides {
  margin-left: 4px;
}

// Charts on designer page
#bar {
  width: 1177px;
  height: 150px;
  position: relative;
  left: -7px;
}

.yaxis {
  transform: rotate(-90deg);
  transform-origin: left top 0;
  position: absolute;
  left: 0px;
}

#yaxis-guides {
  top: 133px;
}

#yaxis-expression {
  top: 350px;
}

.chart-container {
  margin-left: 20px;
}

